Update metadata.yaml to add latest version info

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,9 @@
 homepage: "https://cytrio.com"
 documentation: "https://cytrio.com/documentation"
 versions:
+# Latest version
+  - sha: f4ee7b651ca0ac0b268a2ff9478bb3baa5b49f7c
+    changeNotes: Updated template to have region default input params
+# Older versions
   - sha: 38517b38f8ac0221b88eb128cea11a69968d19bb
     changeNotes: Initial Release
